--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,13 @@ dependencies {
 
   kapt "com.facebook.litho:litho-processor:$litho_version"
 
+  // Litho Sections
+  implementation "com.facebook.litho:litho-sections-core:$litho_version"
+  implementation "com.facebook.litho:litho-sections-widget:$litho_version"
+  compileOnly "com.facebook.litho:litho-sections-annotations:$litho_version"
+
+  kapt "com.facebook.litho:litho-sections-processor:$litho_version"
+
   // SoLoader
   implementation 'com.facebook.soloader:soloader:0.6.0'
 
